fixed breaks and spacing on 1st two pages and fixed padding on contact us form

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -125,12 +125,17 @@ body {
   font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
+#h1 {
+  padding-left: 25px;
+}
+
 h1, h2 {
-  margin-left: 25px;
+  padding-left: 25px;
 }
 #input {
-  margin-left: 25px;
-  padding-left: 20px;
+  margin-left: 40px;
+  width: 25%;
+  padding: 10px;
 }
 /* change padding to margin */
 
@@ -607,13 +612,16 @@ padding: 20px;
   padding-top: 20px;
 }
 
-#contact-success-image {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-}
 
+#contactSuccessBG {
+background: url(../images/chris-greenhow-3FjIywswHSk-unsplash.jpg)  no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    position: static;
+    height: 100%;
+}
 /* Style for Contact Failure page */
 
 #contact-failure-message {
@@ -629,10 +637,12 @@ padding: 20px;
   width: 50%;
 }
 
+/* Contact Us form styling starts here */
 #contact-head {
   color: #fff;
+  /* padding-left: 20px; */
+  padding: 20px;
 }
-
 #contact-us-form {
     background: url(../images/chad-madden-zy-t2K5JmWE-unsplash.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
@@ -642,6 +652,7 @@ padding: 20px;
     position: static;
     width: 100%;
     height: 100%;
+    padding-left: 40px;
 }
 
 h5 {
@@ -661,14 +672,4 @@ h6 {
   background-color:#FFFFFFF0;
   max-width: 40%;
   padding: 20px;
-}
-
-#contactSuccessBG {
-background: url(../images/chris-greenhow-3FjIywswHSk-unsplash.jpg)  no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    position: static;
-    height: 100%;
 }
